Fix issue of profile edit button wrapping when unintended

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -125,7 +125,7 @@
   }
 
   .profile__username {
-    max-width: 100%;
+    max-width: 75%;
     font-weight: 500;
     font-size: 22px;
     line-height: 1.21;
